# Code-MA

./: .gitignore  Cargo.toml  build.rs  link-rp2350.x  lumentra-rp2350.uf2  lumentra.uf2  memory.x
.cargo/: config.toml
scripts/: make-uf2.ps1
src/: main.rs
