[package]
name = "lumentra"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"] }
embassy-rp = { version = "0.10.0", features = ["rp235xa", "time-driver", "critical-section-impl"] }
embassy-time = "0.5.1"
embassy-usb = "0.6.0"
panic-halt = "1.0.0"
static_cell = "2.1.1"
vl53l0x = "1.0.1"

[profile.dev]
debug = true
opt-level = "z"

[profile.release]
debug = true
lto = true
opt-level = "z"
codegen-units = 1
